--- a/index.html
+++ b/index.html
@@ -8,3 +8,26 @@
 <body>
   <div class="container">
     <h1>Café Management Dashboard</h1>
+     
+    <div class="nav-buttons">
+      <button onclick="location.href='create.html'">Create Product</button>
+      <button onclick="location.href='read.html'">View Products</button>
+      <button onclick="location.href='update.html'">Update Product</button>
+      <button onclick="location.href='delete.html'">Delete Product</button>
+    </div>
+
+    <div class="description">
+      <h2>Welcome to Brew Haven Café!</h2>
+      <p>
+        Brew Haven Café is a cozy local café dedicated to serving high-quality coffee, fresh pastries, and delightful snacks. 
+        Our goal is to provide a warm and inviting space where customers can relax, work, or catch up with friends while enjoying 
+        their favorite beverages.
+      </p>
+      <p>
+        This management system allows café staff to efficiently manage products and orders. You can add new items, view available 
+        products, update details, and remove discontinued items — all in a simple and user-friendly interface.
+      </p>
+    </div>
+  </div>
+</body>
+</html>
