--- a/create.html
+++ b/create.html
@@ -12,3 +12,20 @@
     <div class="nav-buttons">
       <button onclick="location.href='index.html'">Home</button>
     </div>
+
+    <div class="form-container">
+      <form id="productForm">
+        <input type="text" id="name" placeholder="Product Name" required>
+        <input type="text" id="category" placeholder="Category">
+        <input type="text" id="description" placeholder="Description">
+        <input type="number" id="price" placeholder="Price" required>
+        <input type="number" id="stock" placeholder="Stock Quantity">
+        <input type="text" id="size" placeholder="Size (Small/Medium/Large)">
+        <button type="submit">Add Product</button>
+      </form>
+    </div>
+  </div>
+
+  <script src="create.js"></script>
+</body>
+</html>
