delete.html commit2

--- a/delete.html
+++ b/delete.html
@@ -21,3 +21,33 @@
         <option value="stock">Sort by Stock</option>
       </select>
     </div>
+
+    
+    <div class="table-container">
+      <table id="productTable">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Category</th>
+            <th>Description</th>
+            <th>Price</th>
+            <th>Stock</th>
+            <th>Size</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Products will appear here -->
+        </tbody>
+      </table>
+    </div>
+
+    <div class="reporting">
+      <p>Total Products: <span id="totalProducts">0</span></p>
+      <p>Total Stock: <span id="totalStock">0</span></p>
+    </div>
+  </div>
+
+  <script src="delete.js"></script>
+</body>
+</html>
