--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     </div>
 
     <div class="description">
-      <h2>Welcome to Brew Haven Café!</h2>
+      <h2>Welcome to Brew Haven Cafe!</h2>
       <p>
-        Brew Haven Café is a cozy local café dedicated to serving high-quality coffee, fresh pastries, and delightful snacks. 
+        Brew Haven Cafe is a cozy local café dedicated to serving high-quality coffee, fresh pastries, and delightful snacks. 
         Our goal is to provide a warm and inviting space where customers can relax, work, or catch up with friends while enjoying 
         their favorite beverages.
       </p>
       <p>
-        This management system allows café staff to efficiently manage products and orders. You can add new items, view available 
+        This management system allows cafe staff to efficiently manage products and orders. You can add new items, view available 
         products, update details, and remove discontinued items — all in a simple and user-friendly interface.
       </p>
     </div>
